Revert "Responsive: fix stat labels single line with nowrap"
This reverts commit 26d4746e071cfdda8c7137990a848cd1ac7e6acc.

--- a/styles.css
+++ b/styles.css
@@ -1758,7 +1758,7 @@ footer {
 
   .premium-stat-label {
     font-size: 19px;
-    white-space: nowrap;
+    white-space: normal;
   }
 
   .premium-icon-box {
